fix: overlap on token creator and a few mobile issues

--- a/packages/website/components/tokens/tokenCreator/tokenCreator.scss
+++ b/packages/website/components/tokens/tokenCreator/tokenCreator.scss
@@ -9,14 +9,21 @@
 
   @include fontSize_Mini;
   @include medium {
-    position: absolute;
-    top: 10rem;
     width: 100%;
     .button {
       width: 100%;
       button {
         align-items: end;
       }
+    }
+
+    .token-creator-submit {
+      // font-size: 1rem;
+      // top: 50%;
+      // transform: translateY(-50%);
+      // &:hover {
+      //   transform: translateY(-50%) scale(1.1);
+      // }
     }
   }
 }
@@ -87,6 +94,10 @@
 .token-creator-submit {
   position: absolute;
   right: 1.25rem;
+  height: 100%;
+  top: 0;
+  display: flex;
+  align-items: center;
   @include fontSize_MediumLarge;
   @include hoverScale;
   .token-creator-check {
